2009-10-12  Marek Habersack  <mhabersack@novell.com>

	* WebColorConverter.cs: when converting from color name, check if
	the returned color's name is a member of the
	System.Drawing.KnownColor enumeration to test for error condition,
	as some colors might be #000000. Preserve the old error check as a
	fallback only. 
	Map "captiontext" and "background" color names to
	"ActiveCaptionText" and "Desktop", respectively, before passing
	them to Color.FromName (). Fixes bug #546173

2009-10-02  Marek Habersack  <mhabersack@novell.com>

	* GridView.cs: added two 3.5 properties - SelectedPersistedDataKey
	and IPersistedSelector.DataKey.

	* BaseDataBoundControl.cs: slight optimizations to FindDataSource

2009-09-28  Marek Habersack  <mhabersack@novell.com>

	* DataBoundControl.cs: Initialize sets RequiresDataBinding
	properly, only when we're not data-bound already, when we aren't
	in postback or when we are in postback, but with viewstate
	enabled. Fixes bug #542076

2009-09-01  Marek Habersack  <mhabersack@novell.com>

	* ObjectDataSourceView.cs: ExecuteSelect must call
	QueryTotalRowCount after executing the select method (that's what
	.NET does)

2009-08-25  Marek Habersack  <mhabersack@novell.com>

	* WebColorConverter.cs: inform the user that the might need to
	check if libgdiplus is installed when parsing a color name
	fails. Fixes bug #533749

2009-08-21  Marek Habersack  <mhabersack@novell.com>

	* Menu.cs: separator image is rendered next to the item in
	horizontal layout and is preceeded by 3px spacer (unless
	itemSpacing is set) to make output match .NET. Fixes bug #474716

	* TreeNodeCollection.cs: {Save,Load}ViewState now store/load the
	type of the node, if node is a of a custom type. Fixes bug #475997

2009-06-29 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Parameter.cs: add new DbType property.

2009-06-16  Marek Habersack  <mhabersack@novell.com>

	* IPersistedSelector.cs: removed AspNetHostingPermission
	attributes from the 4.0 profile.
