@@ -41,24 +41,6 @@ namespace System.Web.UI.WebControls {
 	[AspNetHostingPermission (SecurityAction.InheritanceDemand, Level = AspNetHostingPermissionLevel.Minimal)]
 	public class WebColorConverter : ColorConverter
 	{
-#if NET_2_0
-		static Dictionary <string, bool> knownColorNames;
-#else
-		static Hashtable knownColorNames;
-#endif
-
-		static WebColorConverter ()
-		{
-#if NET_2_0
-			knownColorNames = new Dictionary <string, bool> (StringComparer.Ordinal);
-#else
-			knownColorNames = new Hashtable ();
-#endif
-
-			foreach (string name in Enum.GetNames (typeof (KnownColor)))
-				knownColorNames.Add (name, true);
-		}
-		
 		// Converts from string to Color
 		public override object ConvertFrom (ITypeDescriptorContext context, CultureInfo culture, object value) 
 		{
@@ -121,17 +103,48 @@ namespace System.Web.UI.WebControls {
 
 						// Bug #546173
 						switch (s.ToLower (CultureInfo.InvariantCulture)) {
+							case "background":
+								s = "Desktop";
+								break;
+
+							case "buttonface":
+							case "threedface":
+								s = "Control";
+								break;
+
+							case "buttonhighlight":
+							case "threedlightshadow":
+								s = "ControlLightLight";
+								break;
+
+							case "buttonshadow":
+								s = "ControlDark";
+								break;
+
+							case "buttontext":
+								s = "ControlText";
+								break;
+								
 							case "captiontext":
 								s = "ActiveCaptionText";
 								break;
 
-							case "background":
-								s = "Desktop";
+							case "infobackground":
+								s = "Info";
 								break;
+
+							case "threeddarkshadow":
+								s = "ControlDarkDark";
+								break;
+
+							case "threedhighlight":
+								s = "ControlLight";
+								break;
+								
 						}
 						
 						c = Color.FromName(s);
-						if (knownColorNames.ContainsKey (c.Name) || (c.A != 0) || (c.R != 0) || (c.G != 0) || (c.B != 0)) 
+						if (c.IsKnownColor || (c.A != 0) || (c.R != 0) || (c.G != 0) || (c.B != 0)) 
 						{
 							return c;
 						}
